# tabetai2

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  WORKSPACE  conanfile.txt  database.yaml  db_recipe.yaml
.github/workflows/: ci.yaml
application/: BUILD  CMakeLists.txt
application/src/: main.cpp  server_factory.cpp  server_factory.h
application_server/: CMakeLists.txt
application_server/include/application_server/: server_factory.h
application_server/src/: server_factory.cpp
cmake/: conan.cmake  conan_install.cmake
core/communicator/: CMakeLists.txt
core/communicator/include/communicator/: communicator.h
core/data_publisher/: BUILD  CMakeLists.txt
core/data_publisher/include/data_publisher/: publisher.h  repository_publisher.hpp  repository_publisher_factory.h
core/data_publisher/test/: CMakeLists.txt
core/data_publisher/test/src/: test_repository_publisher.cpp
core/database/: BUILD  CMakeLists.txt
core/database/include/database/: database.h  database.hpp  id_generator.h  id_generator_factory.h  in_memory_database.hpp
core/database/include/database/impl/: id_generator.h
core/database/src/: id_generator_factory.cpp
core/database/src/impl/: id_generator.cpp  id_generator.h
core/ingredient/: BUILD  CMakeLists.txt
core/ingredient/include/ingredient/: ingredient.h  ingredient_repository.h
core/ingredient/src/: ingredient.cpp  ingredient_repository.cpp
core/recipe/: BUILD  CMakeLists.txt
core/recipe/include/recipe/: quantity.h  recipe.h  recipe_repository.h  unit.h
core/recipe/src/: quantity.cpp  recipe.cpp  recipe_repository.cpp
core/recipe/test/: CMakeLists.txt
core/recipe/test/src/: test_recipe_repository.cpp
core/repository/: BUILD  CMakeLists.txt
core/repository/include/repository/: repository.hpp  repository_publisher.hpp
core/schedule/: CMakeLists.txt
core/schedule/include/schedule/: external_recipe_meal.h  leftovers_meal.h  meal.h  meal_type.h  other_meal.h  recipe_meal.h  schedule.h  schedule_day.h  schedule_repository.h  schedule_summary.h
core/schedule/src/: external_recipe_meal.cpp  leftovers_meal.cpp  meal.cpp  other_meal.cpp  recipe_meal.cpp  schedule.cpp  schedule_day.cpp  schedule_repository.cpp  schedule_summary.cpp
core/schedule/test/: CMakeLists.txt
core/schedule/test/src/: test_schedule_repository.cpp
core/server/: BUILD  CMakeLists.txt
core/server/include/server/: server.h  server_factory.h
core/server/src/: server.cpp  server_factory.cpp
core/server/src/impl/: server.cpp  server.h
core/util/: BUILD  CMakeLists.txt
core/util/include/util/: observable.h  observer.h  publisher.h
core/util/include/util/impl/: observable.h
core/util/src/: observable.cpp
data/envoy/: docker-compose.yml  envoy.yaml
data/proto/: tabetai2.proto
docker/: Dockerfile  build.sh  build_all.sh
grpc/grpc_communicator/: CMakeLists.txt
grpc/grpc_communicator/include/grpc_communicator/: grpc_communicator.h
grpc/grpc_communicator/src/: grpc_communicator.cpp
grpc/proto/: CMakeLists.txt
grpc/protos/: tabetai2.proto
gui/: CMakeLists.txt
gui/tabetai2_flutter/: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
gui/tabetai2_flutter/android/: settings.gradle
gui/tabetai2_flutter/android/app/: build.gradle  build.gradle.kts
gui/tabetai2_flutter/assets/cfg/: app_settings.json
gui/tabetai2_flutter/docker/: Dockerfile  build.sh
gui/tabetai2_flutter/ios/Runner/: Info.plist
gui/tabetai2_flutter/ios/Runner.xcodeproj/: project.pbxproj
gui/tabetai2_flutter/lib/: main.dart
gui/tabetai2_flutter/lib/application/: application.dart  edit_recipe_ingredient_list_widget.dart  edit_recipe_step_list_widget.dart  edit_recipe_view_widget.dart  edit_schedule_meals_list_entry_widget.dart  edit_schedule_meals_list_widget.dart  edit_schedule_select_leftovers_meal_widget.dart  edit_schedule_select_meal_type_dialog.dart  edit_schedule_select_other_meal_widget.dart  edit_schedule_select_recipe_meal_widget.dart  edit_schedule_select_url_meal_widget.dart  edit_schedule_view_widget.dart  home_page_widget.dart  home_view_widget.dart  ingredients_view_widget.dart  new_recipe_ingredient_list_widget.dart  new_recipe_step_list_widget.dart  new_recipe_view_widget.dart  recipe_ingredient_list_widget.dart  recipe_step_list_widget.dart  recipe_view.dart  recipes_view_widget.dart  schedule_meals_list_widget.dart  schedule_summary_view_widget.dart  schedule_view_widget.dart  schedules_view_widget.dart
gui/tabetai2_flutter/linux/: CMakeLists.txt  my_application.cc
gui/tabetai2_flutter/test/: widget_test.dart
gui/tabetai2_flutter/web/: index.html  manifest.json
gui/tabetai2_flutter/windows/: CMakeLists.txt
scripts/: deploy.sh
wamp/wamp_data/: BUILD  CMakeLists.txt
wamp/wamp_publisher/: BUILD  CMakeLists.txt
wamp/wamp_publisher/include/wamp_publisher/: repository_publisher_factory.h
wamp/wamp_publisher/src/: ingredient_repository_publisher.cpp  ingredient_repository_publisher.h  recipe_repository_publisher.cpp  recipe_repository_publisher.h  repository_publisher_factory.cpp
wamp/wamp_session/: BUILD  CMakeLists.txt
wamp/wamp_session/include/wamp_session/: wamp_session.h  wamp_session_factory.h
wamp/wamp_session/src/: wamp_session_factory.cpp
wamp/wamp_session/src/impl/: wamp_session.cpp  wamp_session.h
wamp_publisher/: CMakeLists.txt
wamp_publisher/include/wamp_publisher/: repository_publisher_factory.h  session.h  wamp_session.h  wamp_session_factory.h
wamp_publisher/src/: ingredient_repository_publisher.cpp  ingredient_repository_publisher.h  repository_publisher.h  repository_publisher_factory.cpp  session.cpp  wamp_session.cpp  wamp_session_factory.cpp
wamp_publisher/src/impl/: wamp_session.cpp  wamp_session.h
warning/: CMakeLists.txt
yaml_database/: BUILD  CMakeLists.txt
yaml_database/include/yaml_database/: yaml_database.hpp  yaml_ingredient_database.h  yaml_recipe_database.h  yaml_schedule_database.h
yaml_database/src/: yaml_ingredient_database.cpp  yaml_recipe_database.cpp  yaml_schedule_database.cpp
(+21 files in other folders)
